Add pseudo classes

--- a/index.html
+++ b/index.html
@@ -125,47 +125,47 @@
 
       <div class="col-1-5 text-center p-0 d-flex flex-column">
 
-        <div class="tile side-tile  flex-fill">
+        <div class="tile side-tile flex-fill">
           <div class="headerSide header-right-property green"></div>
           <div class="title title-right rotation-90">PACIFIC <br /> AVENUE</div>
         </div>
 
-        <div class="tile side-tile  flex-fill">
+        <div class="tile side-tile flex-fill">
           <div class="headerSide header-right-property green"></div>
           <div class="title title-right rotation-90">NORTH <br /> CAROLINA <br />AVENUE</div>
         </div>
 
-        <div class="tile side-tile  flex-fill">
+        <div class="tile side-tile flex-fill">
           <div class="header-right-card title rotation-90">COMMUNITY <br /> CHEST</div>
           <img src="assets/Community Chest.png" alt="House" class="card-image-right" />
         </div>
 
-        <div class="tile side-tile  flex-fill">
+        <div class="tile side-tile flex-fill">
           <div class="headerSide header-right-property green"></div>
           <div class="title title-right rotation-90">PENNSYLVANIA <br /> AVENUE</div>
         </div>
 
-        <div class="tile side-tile  flex-fill">
+        <div class="tile side-tile flex-fill">
           <div class="header-right-card title rotation-90">SHORT<br /> LINE</div>
           <img src="assets/Train.png" alt="House" class="card-image-right" />
         </div>
 
-        <div class="tile side-tile  flex-fill">
+        <div class="tile side-tile flex-fill">
           <div class="header-right-card title rotation-90">CHANCE</div>
           <img src="assets/chance.png" alt="House" class="card-image-right-chance" />
         </div>
 
-        <div class="tile side-tile  flex-fill">
+        <div class="tile side-tile flex-fill">
           <div class="headerSide header-right-property blue"></div>
           <div class="title title-right rotation-90">PARK <br /> PLACE</div>
         </div>
 
-        <div class="tile side-tile  flex-fill">
+        <div class="tile side-tile flex-fill">
           <div class="header-right-card title rotation-90">LUXURY <br /> TAX</div>
           <img src="assets/luxury tax.png" alt="House" class="card-image-right-luxury" />
         </div>
 
-        <div class="tile side-tile  flex-fill">
+        <div class="tile side-tile flex-fill">
           <div class="headerSide header-right-property blue"></div>
           <div class="title title-right rotation-90">BOARDWALK</div>
         </div>
@@ -174,57 +174,57 @@
     </div>
 
     <!---------------------------------------------- Row 3 ------------------------------------------------------------>
-    <div class="row bottom-row d-flex g-1">
-      <div class="tile col-1-5  text-center">
+    <div class="row bottom-row d-flex flex-row g-1">
+      <div class="tile col-1-5 ">
         <img src="assets/In Jail.png" alt="House" class="bottom-left-corner" />
       </div>
 
-      <div class="tile col  text-center">
+      <div class="tile col">
         <div class="header header-bottom-property lightblue"></div>
         <div class="title title-bottom">CONNECTICUT <br /> AVENUE</div>
       </div>
 
-      <div class="tile col  text-center">
+      <div class="tile col ">
         <div class="header header-bottom-property lightblue"></div>
         <div class="title title-bottom">VERMONT <br /> AVENUE</div>
       </div>
 
-      <div class="tile col  text-center">
+      <div class="tile col flex-fill ">
         <div class="header-bottom-card title">CHANCE</div>
         <img src="assets/chance.png" alt="House" class="card-image-bottom-chance" />
       </div>
 
-      <div class="tile col  text-center">
+      <div class="tile col ">
         <div class="header header-bottom-property brown"></div>
         <div class="title title-bottom">ORIENTAL <br /> AVENUE</div>
       </div>
 
-      <div class="tile col  text-center">
+      <div class="tile col ">
         <div class="header-bottom-card title">READING<br /> RAILROAD</div>
         <img src="assets/Train.png" alt="House" class="card-image-bottom" />
       </div>
 
-      <div class="tile col  text-center">
+      <div class="tile col ">
         <div class="header-bottom-card title">INCOME<br />TAX</div>
         <img src="assets/income.png" alt="House" class="card-image-bottom-income" />
       </div>
 
-      <div class="tile col  text-center">
+      <div class="tile col ">
         <div class="header header-bottom-property brown"></div>
         <div class="title title-bottom">BALTIC <br /> AVENUE</div>
       </div>
 
-      <div class="tile col  text-center">
+      <div class="tile col ">
         <div class="header-bottom-card title">COMMUNITY<br />CHEST</div>
         <img src="assets/Community Chest.png" alt="House" class="card-image-bottom" />
       </div>
 
-      <div class="tile col  text-center">
+      <div class="tile col ">
         <div class="header header-bottom-property brown"></div>
         <div class="title title-bottom">MEDITER- <br /> RANEAN <br /> AVENUE</div>
       </div>
 
-      <div class="tile col-1-5  text-center">
+      <div class="tile col-1-5 ">
         <img src="assets/Go.png" alt="House" class="bottom-right-corner" />
       </div>
     </div>
