Add pseudo classes

--- a/index.html
+++ b/index.html
@@ -202,16 +202,19 @@
       <div class="tile col ">
         <div class="header-bottom-card title">READING<br /> RAILROAD</div>
         <img src="assets/Train.png" alt="House" class="card-image-bottom" />
+        <div class="price price-bottom">M200</div>
       </div>
 
       <div class="tile col ">
         <div class="header-bottom-card title">INCOME<br />TAX</div>
         <img src="assets/income.png" alt="House" class="card-image-bottom-income" />
+        <div class="price price-bottom">PAY M200</div>
       </div>
 
       <div class="tile col ">
         <div class="header header-bottom-property brown"></div>
         <div class="title title-bottom">BALTIC <br /> AVENUE</div>
+        <div class="price price-bottom">M60</div>
       </div>
 
       <div class="tile col ">
@@ -222,6 +225,7 @@
       <div class="tile col ">
         <div class="header header-bottom-property brown"></div>
         <div class="title title-bottom">MEDITER- <br /> RANEAN <br /> AVENUE</div>
+        <div class="price price-bottom">M60</div>
       </div>
 
       <div class="tile col-1-5 ">
