--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <div class="tile col text-center">
         <div class="header header-top-property red"></div>
         <div class="title title-top rotation180">KENTUCKY <br /> AVENUE</div>
+        <div class="price price-top rotation180">M220</div>
       </div>
 
       <div class="tile col text-center">
@@ -26,37 +27,44 @@
       <div class="tile col text-center">
         <div class="header header-top-property red"></div>
         <div class="title title-top rotation180">INDIANA <br /> AVENUE</div>
+        <div class="price price-top rotation180">M220</div>
       </div>
 
       <div class="tile col  text-center">
         <div class="header header-top-property red"></div>
         <div class="title title-top rotation180">ILLINOIS <br /> AVENUE</div>
+        <div class="price price-top rotation180">M240</div>
       </div>
 
       <div class="tile col  text-center">
         <div class="header-top-card title rotation180">B. & O.<br /> RAILROAD</div>
         <img src="assets/Train.png" alt="House" class="card-image-top" />
+        <div class="price price-top rotation180">M200</div>
       </div>
 
       <div class="tile col  text-center">
         <div class="header header-top-property yellow"></div>
         <div class="title title-top rotation180">ATLANTIC <br /> AVENUE</div>
+        <div class="price price-top rotation180">M260</div>
       </div>
 
       <div class="tile col  text-center">
         <div class="header header-top-property yellow"></div>
         <div class="title title-top rotation180">VENTNOR <br /> AVENUE</div>
+        <div class="price price-top rotation180">M260</div>
       </div>
 
       <div class="tile col  text-center">
         <div class="header-top-card title rotation180">WATER <br /> WORKS</div>
         <img src="assets/Waterworks.png" alt="House" class="card-image-top" />
+        <div class="price price-top rotation180">M150</div>
 
       </div>
 
       <div class="tile col  text-center">
         <div class="header header-top-property yellow"></div>
         <div class="title title-top rotation180">MARVIN <br /> GARDENS</div>
+        <div class="price price-top rotation180">M280</div>
       </div>
 
       <div class="tile border col-1-5  text-center ">
@@ -71,11 +79,13 @@
         <div class="tile side-tile flex-fill">
           <div class="headerSide header-left-property orange"></div>
           <div class="title title-left rotation90">NEW YORK <br /> AVENUE</div>
+          <div class="price price-left rotation90">M200</div>
         </div>
 
         <div class="tile side-tile  flex-fill">
           <div class="headerSide header-left-property orange"></div>
           <div class="title title-left rotation90">TENNESSEE <br /> AVENUE</div>
+          <div class="price price-left rotation90">M180</div>
         </div>
 
         <div class="tile side-tile  flex-fill">
@@ -86,31 +96,37 @@
         <div class="tile side-tile  flex-fill">
           <div class="headerSide header-left-property orange"></div>
           <div class="title title-left rotation90">ST. JAMES <br /> PLACE</div>
+          <div class="price price-left rotation90">M180</div>
         </div>
 
         <div class="tile side-tile  flex-fill">
           <div class="header-left-card title rotation90">PENNSYLVANIA<br /> RAILROAD</div>
           <img src="assets/Train.png" alt="House" class="card-image-left" />
+          <div class="price price-left rotation90">M200</div>
         </div>
 
         <div class="tile side-tile  flex-fill">
           <div class="headerSide header-left-property pink"></div>
           <div class="title title-left rotation90">VIRGINIA <br /> AVENUE</div>
+          <div class="price price-left rotation90">M160</div>
         </div>
 
         <div class="tile side-tile  flex-fill">
           <div class="headerSide header-left-property pink"></div>
           <div class="title title-left rotation90">STATES <br /> AVENUE</div>
+          <div class="price price-left rotation90">M140</div>
         </div>
 
         <div class="tile side-tile  flex-fill">
           <div class="header-left-card title rotation90">ELECTRIC<br /> COMPANY</div>
           <img src="assets/Electric Company.png" alt="House" class="card-image-left-electric" />
+          <div class="price price-left rotation90">M150</div>
         </div>
 
         <div class="tile side-tile  flex-fill">
           <div class="headerSide header-left-property pink"></div>
           <div class="title title-left rotation90">ST. CHARLES <br /> PLACE</div>
+          <div class="price price-left rotation90">M140</div>
         </div>
 
       </div>
@@ -128,11 +144,13 @@
         <div class="tile side-tile flex-fill">
           <div class="headerSide header-right-property green"></div>
           <div class="title title-right rotation-90">PACIFIC <br /> AVENUE</div>
+          <div class="price price-right rotation-90">M300</div>
         </div>
 
         <div class="tile side-tile flex-fill">
           <div class="headerSide header-right-property green"></div>
           <div class="title title-right rotation-90">NORTH <br /> CAROLINA <br />AVENUE</div>
+          <div class="price price-right rotation-90">M300</div>
         </div>
 
         <div class="tile side-tile flex-fill">
@@ -143,11 +161,13 @@
         <div class="tile side-tile flex-fill">
           <div class="headerSide header-right-property green"></div>
           <div class="title title-right rotation-90">PENNSYLVANIA <br /> AVENUE</div>
+          <div class="price price-right rotation-90">M320</div>
         </div>
 
         <div class="tile side-tile flex-fill">
           <div class="header-right-card title rotation-90">SHORT<br /> LINE</div>
           <img src="assets/Train.png" alt="House" class="card-image-right" />
+          <div class="price price-right rotation-90">M200</div>
         </div>
 
         <div class="tile side-tile flex-fill">
@@ -158,16 +178,19 @@
         <div class="tile side-tile flex-fill">
           <div class="headerSide header-right-property blue"></div>
           <div class="title title-right rotation-90">PARK <br /> PLACE</div>
+          <div class="price price-right rotation-90">M350</div>
         </div>
 
         <div class="tile side-tile flex-fill">
           <div class="header-right-card title rotation-90">LUXURY <br /> TAX</div>
           <img src="assets/luxury tax.png" alt="House" class="card-image-right-luxury" />
+          <div class="price price-right rotation-90">PAY M100</div>
         </div>
 
         <div class="tile side-tile flex-fill">
           <div class="headerSide header-right-property blue"></div>
           <div class="title title-right rotation-90">BOARDWALK</div>
+          <div class="price price-right rotation-90">M400</div>
         </div>
 
       </div>
@@ -182,11 +205,13 @@
       <div class="tile col">
         <div class="header header-bottom-property lightblue"></div>
         <div class="title title-bottom">CONNECTICUT <br /> AVENUE</div>
+        <div class="price price-bottom">M120</div>
       </div>
 
       <div class="tile col ">
         <div class="header header-bottom-property lightblue"></div>
         <div class="title title-bottom">VERMONT <br /> AVENUE</div>
+        <div class="price price-bottom">M100</div>
       </div>
 
       <div class="tile col flex-fill ">
@@ -197,6 +222,7 @@
       <div class="tile col ">
         <div class="header header-bottom-property brown"></div>
         <div class="title title-bottom">ORIENTAL <br /> AVENUE</div>
+        <div class="price price-bottom">M100</div>
       </div>
 
       <div class="tile col ">
