refactor(html): Remove unnecessary classes

--- a/index.html
+++ b/index.html
@@ -74,56 +74,56 @@
 
     <!---------------------------------------------- Row 2 ------------------------------------------------------------>
     <div class="row center-row g-1">
-      <div class="tile col-1-5 text-center p-0 d-flex flex-column">
+      <div class="col-1-5 text-center p-0 d-flex flex-column">
 
-        <div class="tile side-tile flex-fill">
+        <div class="side-tile flex-fill">
           <div class="headerSide header-left-property orange"></div>
           <div class="title title-left rotation90">NEW YORK <br /> AVENUE</div>
           <div class="price price-left rotation90">M200</div>
         </div>
 
-        <div class="tile side-tile  flex-fill">
+        <div class="side-tile  flex-fill">
           <div class="headerSide header-left-property orange"></div>
           <div class="title title-left rotation90">TENNESSEE <br /> AVENUE</div>
           <div class="price price-left rotation90">M180</div>
         </div>
 
-        <div class="tile side-tile  flex-fill">
+        <div class=" side-tile  flex-fill">
           <div class="header-left-card title rotation90">COMMUNITY <br /> CHEST</div>
           <img src="assets/Community Chest.png" alt="House" class="card-image-left" />
         </div>
 
-        <div class="tile side-tile  flex-fill">
+        <div class="side-tile  flex-fill">
           <div class="headerSide header-left-property orange"></div>
           <div class="title title-left rotation90">ST. JAMES <br /> PLACE</div>
           <div class="price price-left rotation90">M180</div>
         </div>
 
-        <div class="tile side-tile  flex-fill">
+        <div class="side-tile  flex-fill">
           <div class="header-left-card title rotation90">PENNSYLVANIA<br /> RAILROAD</div>
           <img src="assets/Train.png" alt="House" class="card-image-left" />
           <div class="price price-left rotation90">M200</div>
         </div>
 
-        <div class="tile side-tile  flex-fill">
+        <div class=" side-tile  flex-fill">
           <div class="headerSide header-left-property pink"></div>
           <div class="title title-left rotation90">VIRGINIA <br /> AVENUE</div>
           <div class="price price-left rotation90">M160</div>
         </div>
 
-        <div class="tile side-tile  flex-fill">
+        <div class=" side-tile  flex-fill">
           <div class="headerSide header-left-property pink"></div>
           <div class="title title-left rotation90">STATES <br /> AVENUE</div>
           <div class="price price-left rotation90">M140</div>
         </div>
 
-        <div class="tile side-tile  flex-fill">
+        <div class="side-tile  flex-fill">
           <div class="header-left-card title rotation90">ELECTRIC<br /> COMPANY</div>
           <img src="assets/Electric Company.png" alt="House" class="card-image-left-electric" />
           <div class="price price-left rotation90">M150</div>
         </div>
 
-        <div class="tile side-tile  flex-fill">
+        <div class="side-tile  flex-fill">
           <div class="headerSide header-left-property pink"></div>
           <div class="title title-left rotation90">ST. CHARLES <br /> PLACE</div>
           <div class="price price-left rotation90">M140</div>
@@ -141,53 +141,53 @@
 
       <div class="col-1-5 text-center p-0 d-flex flex-column">
 
-        <div class="tile side-tile flex-fill">
+        <div class=" side-tile flex-fill">
           <div class="headerSide header-right-property green"></div>
           <div class="title title-right rotation-90">PACIFIC <br /> AVENUE</div>
           <div class="price price-right rotation-90">M300</div>
         </div>
 
-        <div class="tile side-tile flex-fill">
+        <div class=" side-tile flex-fill">
           <div class="headerSide header-right-property green"></div>
           <div class="title title-right rotation-90">NORTH <br /> CAROLINA <br />AVENUE</div>
           <div class="price price-right rotation-90">M300</div>
         </div>
 
-        <div class="tile side-tile flex-fill">
+        <div class="side-tile flex-fill">
           <div class="header-right-card title rotation-90">COMMUNITY <br /> CHEST</div>
           <img src="assets/Community Chest.png" alt="House" class="card-image-right" />
         </div>
 
-        <div class="tile side-tile flex-fill">
+        <div class=" side-tile flex-fill">
           <div class="headerSide header-right-property green"></div>
           <div class="title title-right rotation-90">PENNSYLVANIA <br /> AVENUE</div>
           <div class="price price-right rotation-90">M320</div>
         </div>
 
-        <div class="tile side-tile flex-fill">
+        <div class="side-tile flex-fill">
           <div class="header-right-card title rotation-90">SHORT<br /> LINE</div>
           <img src="assets/Train.png" alt="House" class="card-image-right" />
           <div class="price price-right rotation-90">M200</div>
         </div>
 
-        <div class="tile side-tile flex-fill">
+        <div class="side-tile flex-fill">
           <div class="header-right-card title rotation-90">CHANCE</div>
           <img src="assets/chance.png" alt="House" class="card-image-right-chance" />
         </div>
 
-        <div class="tile side-tile flex-fill">
+        <div class="side-tile flex-fill">
           <div class="headerSide header-right-property blue"></div>
           <div class="title title-right rotation-90">PARK <br /> PLACE</div>
           <div class="price price-right rotation-90">M350</div>
         </div>
 
-        <div class="tile side-tile flex-fill">
+        <div class="side-tile flex-fill">
           <div class="header-right-card title rotation-90">LUXURY <br /> TAX</div>
           <img src="assets/luxury tax.png" alt="House" class="card-image-right-luxury" />
           <div class="price price-right rotation-90">PAY M100</div>
         </div>
 
-        <div class="tile side-tile flex-fill">
+        <div class="side-tile flex-fill">
           <div class="headerSide header-right-property blue"></div>
           <div class="title title-right rotation-90">BOARDWALK</div>
           <div class="price price-right rotation-90">M400</div>
